Fixed problems with logs scrollbar lock-to-bottom feature Started log search Minor cosmetic modifications

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -37,3 +37,7 @@
 .btn-secondary {
 	background-color: #88912D;
 }
+
+.btn-link {
+	color: #32afb2;
+}
