--- a/src/css/project.css
+++ b/src/css/project.css
@@ -1,79 +1,3 @@
 .containers {
 	padding-top: 30px;
 }
-
-.log-buttons {
-	position: absolute;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	right: 0;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	visibility: hidden;
-	opacity: 0;
-	transition: opacity 500ms ease;
-	background-color: rgba(255, 255, 255, 0.9);
-}
-
-.tab-content .log:hover ~ .log-buttons ,
-.log-buttons:hover {
-	visibility: visible;
-	opacity: 1;
-}
-
-.tab-content h4 {
-	color: #32afb2;
-	font-weight: bold;
-}
-
-.scrollbar-lock-status {
-	display: table;
-	margin: 0 auto;
-}
-
-.scrollbar-lock-status i {
-	display: block;
-	color: #555;
-}
-
-.log-buttons .switch {
-	width: 82px;
-}
-
-.log-buttons .switch.checked {
-	background: #fff;
-	border-color: #eee;
-}
-
-.log-buttons .switch small {
-	background-color: #32afb2;
-}
-
-.log-buttons .switch.checked small {
-	left: 52px;
-}
-
-.switch .switch-text {
-	font-family: inherit;
-	font-size: 12px;
-}
-
-.log-buttons .switch .switch-text .on,
-.log-buttons .switch .switch-text .off {
-	top: 6px;
-	color: #32afb2;
-}
-
-
-.tab-content .log pre {
-	display: inline-block;
-	font-size: 0.9em;
-	word-wrap: normal;
-	overflow-x: hidden;
-}
-
-.tab-content .conf-values .conf-value {
-	float: right;
-	width: 80%;
-}
